Update based on review